--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,6 +1,6 @@
 <h1 class="todo_list_title">New Todo</h1>
-
+<div class="row clearfix">
 <%= render 'form' %>
-<div class="links">
-<%= link_to 'Back', todos_path %>
+
+<%= link_to '<button class="button button2">Back</button>'.html_safe, todos_path %>
 </div>
