--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,7 @@
 <h2>Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+ <div class="row clearfix">
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
@@ -23,3 +24,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
