--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
- 
+ <div class="row clearfix">
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -28,3 +28,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
