--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,7 +1,7 @@
 <h1 class="todo_list_title">Editing Todo</h1>
-
+<div class="row clearfix">
 <%= render 'form' %>
-<div class="links">
-<%= link_to 'Show', @todo %> |
-<%= link_to 'Back', todos_path %>
+
+<%= link_to '<button class="button button2">Show</button>'.html_safe, @todo %> 
+<%= link_to '<button class="button button2">Back</button>'.html_safe, todos_path %>
 </div>
